force-app/main/default/objects/Legal_Advisor__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>