force-app/main/default/objects/Legal_Advisor__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Account Status</description>
    <label>Account Status</label>
    <length>8</length>
    <type>Text</type>
</CustomField>