force-app/main/default/objects/Legal_Advisor__c/fields/Total_Clients__c.field-meta.xml
<CustomField>
    <fullName>Total_Clients__c</fullName>
    <description>Show Total Of Clients</description>
    <label>Total Clients</label>
    <summaryForeignKey>Client__c.Legal_Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>